# sage

./: .env.example  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
sage/: __init__.py  __main__.py  client.py  config.py  helpers.py  log.py  paths.py  utils.py
sage/assets/docs/: privacy_policy.md  terms_of_service.md
sage/assets/locale/: en-GB.yml
sage/config/: sage_client.yml
sage/locale/: __init__.py  manager.py  translator.py
sage/models/: locale.py
